--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="background-color: black">
-    <canvas width="500" height="500" id="mycanvas"></canvas>
+    <canvas width="500" height="600" id="mycanvas"></canvas>
     <aside>
         <p>Touch on board to place pixels</p>
     <input type="checkbox" id="updateBool" name="updateBool">
@@ -17,7 +17,7 @@
     <input type="range" min="0" max="5" value="1" id="fillColor">
     <label for="fillcolor" id="sliderLabel">white</label>
     </aside>
-    <script defer src="gameOfLife.js"></script>
+    <script defer src="fallingSand.js"></script>
     
 </body>
 </html>
